<resources>
    <string name="app_name">FourthWall</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_3d_image_of_money">3D image of money</string>
    <string name="home">Home</string>
    <string name="orders">Orders</string>
    <string name="dashboard">Dashboard</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="home_page">Home page</string>
    <string name="country_flag_image">Country flag image</string>
    <string name="select_country">Select Country</string>
    <string name="drop_down_arrow_icon">Drop-down arrow icon</string>
    <string name="full_name">Full name</string>
    <string name="text_continue">Continue</string>
    <string name="user_agreement_clause">FourthWall will securely store your DID (Decentralized Identifier) and VC (Verifiable Credentials) for use in transaction orders. \n\nYou can revoke them in settings at a later time.</string>
    <string name="i_understand_and_accept">I understand, and accept</string>
    <string name="get_credentials">Get Credentials</string>
    <string name="bottom_sheet_drag_handle">Bottom sheet drag handle</string>
    <string name="recipient_gets">Recipient gets</string>
    <string name="you_send">You send</string>
    <string name="amount">Amount</string>
    <string name="country_flag">Country Flag</string>
    <string name="_0_0">0.0</string>
    <string name="best_offer"> (Best offer)</string>
    <string name="item_currency_text">%1$s (%2$s)</string>
    <string name="only_offer"> (Only offer)</string>
    <string name="provider">Provider</string>
    <string name="back_button">Back Button</string>
    <string name="find_offerings">Find offerings</string>
    <string name="value_detail_placeholder">(1 %1$s gets %2$s %3$s)</string>
    <string name="in_transit">In-Transit</string>
    <string name="failed">Failed</string>
    <string name="successful">Successful</string>
    <string name="currency_image">Currency image</string>
    <string name="forward_button">Forward Button</string>
    <string name="order_time">• %1$s</string>
    <string name="fund">Fund</string>
    <string name="send">Send</string>
    <string name="recent">Recent</string>
    <string name="main_balance">Main balance:</string>
    <string name="request">Request</string>
    <string name="required_credentials">Required Credentials</string>
    <string name="payment_method">Payment Method</string>
    <string name="required_credentials_are_available">Required credentials are available</string>
    <string name="required_credentials_are_missing">Required credentials are missing</string>
    <string name="select_currency">Select Currency</string>
    <string name="enter_payment_details">Enter payment details</string>
    <string name="wallet_address">Wallet address</string>
    <string name="bank_account_pay_in">Bank account (Pay In)</string>
    <string name="bank_account_pay_out">Bank account (Pay Out)</string>
    <string name="routing_number">Routing number</string>
    <string name="update">Update</string>
    <string name="top_up">Top Up</string>
    <string name="pending">Pending</string>
    <string name="go_home">Go Home</string>
    <string name="curves">Curves</string>
    <string name="get_quote">Get Quote</string>
    <string name="order">Order</string>
    <string name="transaction_success_message">You have successfully paid %1$s</string>
    <string name="transaction_cancelled_message">You cancelled your payment of %1$s</string>
    <string name="rate_your_experience_with">Rate your experience with %1$s</string>
    <string name="terms_conditions">FourthWall will securely store your Decentralized Identifier and Verifiable Credentials for use in subsequent transactions. \n\nYou can revoke this in settings</string>
    <string name="explore">Explore</string>
    <string name="recipient">Recipient</string>
    <string name="fingerprint_image">Fingerprint image</string>
    <string name="sign_in_with_biometrics">Sign in with biometrics</string>
    <string name="cancelled">Cancelled</string>
    <string name="profile">Profile</string>
</resources>