<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layoutBackground"
    tools:context=".presentation.onboarding.FinalOnboardingActivity">


    <ImageView
        android:id="@+id/ic_big_icon"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/_3d_image_of_money"
        android:maxWidth="200dp"
        android:maxHeight="200dp"
        android:src="@drawable/ic_rocket_3d"
        app:layout_constraintBottom_toTopOf="@id/tv_terms_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_terms_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/cera_pro_medium"
        android:text="@string/terms_conditions"
        android:textAlignment="center"
        android:textColor="@color/textOnBackground"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/cb_terms_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cb_terms_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/cera_pro_light"
        android:text="I agree"
        android:textColor="@color/textOnBackground"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_get_started"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_get_started"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/primaryBtnBackgroundTint"
        android:fontFamily="@font/cera_pro_medium"
        android:minHeight="56dp"
        android:text="@string/get_started"
        android:textColor="@color/primaryBtnTextOnBackground"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>