<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back_icon"
        app:navigationIconTint="@color/textOnBackground">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cera_pro_medium"
            android:text="Create Wallet Account"
            android:textColor="@color/textOnBackground"
            android:textSize="18sp" />
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/layoutBackground"
        tools:context=".presentation.account.CreateCurrencyAccountFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_name"
            style="@style/CustomTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/full_name"
            android:layout_marginTop="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/cera_pro_light"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/layout_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/outlined_box_background"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/layout_name">

            <ImageView
                android:id="@+id/iv_flag"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/country_flag_image"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_currency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center"
                android:layout_marginStart="-6dp"
                android:layout_weight="1"
                android:fontFamily="@font/cera_pro_light"
                android:hint="@string/select_country"
                android:padding="16dp"
                android:textColor="@color/textOnBackground"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="12dp"
                android:alpha="0.5"
                android:contentDescription="@string/drop_down_arrow_icon"
                android:src="@drawable/ic_dropdown_arrow"
                app:tint="@color/textOnBackground" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginHorizontal="48dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/primaryBtnBackgroundTint"
                android:fontFamily="@font/cera_pro_medium"
                android:text="@string/text_continue"
                android:textColor="@color/primaryBtnTextOnBackground"
                android:textSize="18sp" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>