<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="84dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    android:backgroundTint="@color/itemLayoutAboveBackground"
    android:elevation="0dp"
    app:cardCornerRadius="42dp"
    app:cardElevation="0dp"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivCurrencyIcon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/currency_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvReceiverName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/cera_pro_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/ivCurrencyIcon"
            app:layout_constraintTop_toTopOf="@id/ivCurrencyIcon"
            tools:text="Dave" />

        <TextView
            android:id="@+id/tvOrderType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/cera_pro_light"
            android:textColor="@color/textColorGreyed"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ivCurrencyIcon"
            app:layout_constraintStart_toEndOf="@id/ivCurrencyIcon"
            app:layout_constraintTop_toBottomOf="@id/tvReceiverName"
            tools:text="Sent" />

        <TextView
            android:id="@+id/tvOrderTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/cera_pro_light"
            android:textColor="@color/textColorGreyed"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/tvOrderType"
            app:layout_constraintBottom_toBottomOf="@+id/tvOrderType"
            app:layout_constraintStart_toEndOf="@id/tvOrderType"
            tools:text="•  Sep 18, 2023" />

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/cera_pro_medium"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/ivForward"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="$21,553" />

        <TextView
            android:id="@+id/tvSuccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/cera_pro_light"
            android:text="@string/successful"
            android:textColor="@color/green_offers"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@id/ivForward"
            app:layout_constraintTop_toBottomOf="@id/tvAmount" />

        <TextView
            android:id="@+id/tvFailure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/cera_pro_light"
            android:text="@string/failed"
            android:textColor="@color/bright_red_error"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@id/ivForward"
            app:layout_constraintTop_toBottomOf="@id/tvAmount" />

        <TextView
            android:id="@+id/tvInTransit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/cera_pro_light"
            android:text="@string/in_transit"
            android:textColor="@color/shaded_base_purple"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@id/ivForward"
            app:layout_constraintTop_toBottomOf="@id/tvAmount" />

        <ImageView
            android:id="@+id/ivForward"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/forward_button"
            android:src="@drawable/ic_forward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>