<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/layout_wallet_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wallet_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wallet_address"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_wallet_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cera_pro_light"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bank_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bank_account_pay_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bank_account_pay_in"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_bank_account_pay_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cera_pro_light"
                android:inputType="number"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bank_account_pay_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/bank_account_pay_out"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_bank_account_pay_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cera_pro_light"
                android:inputType="number"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bank_account_usd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:orientation="vertical"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bank_account_pay_in_usd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bank_account_pay_in"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_bank_account_pay_in_usd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cera_pro_light"
                android:inputType="number"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bank_account_pay_out_usd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/bank_account_pay_out"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_bank_account_pay_out_usd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cera_pro_light"
                android:inputType="number"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/routing_number_usd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/routing_number"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_routing_number_usd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cera_pro_light"
                android:inputType="number"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/shaded_base_purple"
        android:fontFamily="@font/cera_pro_medium"
        android:minHeight="56dp"
        android:text="@string/update"
        android:textSize="16sp" />
</LinearLayout>